[gd_scene load_steps=16 format=2]

[ext_resource path="res://shaders/Rainbow.shader" type="Shader" id=1]
[ext_resource path="res://graphics/stages/water/2p.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/Text.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Board.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ItemFrame.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/TrashPreview.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/MultiPlayer.gd" type="Script" id=7]
[ext_resource path="res://graphics/colors/red/leftframe.png" type="Texture" id=8]
[ext_resource path="res://graphics/noise.png" type="Texture" id=9]
[ext_resource path="res://graphics/colors/green/rightframe.png" type="Texture" id=10]
[ext_resource path="res://scenes/CharacterSprite.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/active = false
shader_param/noiseTexture = ExtResource( 9 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/active = false
shader_param/noiseTexture = ExtResource( 9 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
    COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
    float avg = (COLOR.r + COLOR.g + COLOR.b) / 3.0;
    COLOR.rgb = vec3(avg);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="MultiPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 128, 112 )
frames = ExtResource( 2 )
frame = 1
playing = true

[node name="Board1" parent="." instance=ExtResource( 4 )]
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -89.0
margin_right = 104.0
margin_bottom = 112.0

[node name="Board2" parent="." instance=ExtResource( 4 )]
anchor_left = 0.594
anchor_top = 0.103
anchor_right = 0.969
anchor_bottom = 1.0
margin_left = -0.0640106
margin_top = -0.0720024
margin_right = -0.0640106
margin_bottom = 0.0

[node name="Frame" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 128, 127 )
texture = ExtResource( 8 )

[node name="RightFrame" type="Sprite" parent="Frame"]
material = SubResource( 2 )
texture = ExtResource( 10 )

[node name="Score1" parent="Frame" instance=ExtResource( 3 )]
position = Vector2( -12, -16 )
text = "0000"
font = "red"
separation = 8

[node name="Score2" parent="Frame" instance=ExtResource( 3 )]
position = Vector2( -12, 16 )
text = "0000"
font = "green"
separation = 8

[node name="Level1" parent="Frame" instance=ExtResource( 3 )]
position = Vector2( -12, -91.5 )
text = "00"
font = "red"
separation = 7

[node name="Level2" parent="Frame" instance=ExtResource( 3 )]
position = Vector2( 5, -91.5 )
text = "00"
font = "green"
separation = 7

[node name="Time" parent="Frame" instance=ExtResource( 3 )]
position = Vector2( -16, 48 )
text = "00'00"
font = "black"
separation = 8

[node name="TrashPreview1" parent="Frame" instance=ExtResource( 6 )]
position = Vector2( -120, -121 )

[node name="TrashPreview2" parent="Frame" instance=ExtResource( 6 )]
position = Vector2( 28, -121 )

[node name="Character1" parent="Frame" instance=ExtResource( 11 )]
position = Vector2( -11, -49 )

[node name="Character2" parent="Frame" instance=ExtResource( 11 )]
position = Vector2( 11, -49 )
scale = Vector2( -1, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.1906
margin_top = -220.362
margin_right = 18.8094
margin_bottom = -206.362
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemFrame1" parent="." instance=ExtResource( 5 )]
position = Vector2( 116, 210 )

[node name="ItemFrame2" parent="." instance=ExtResource( 5 )]
position = Vector2( 140, 210 )

[node name="BlackWhite1" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 4 )
margin_left = 6.5
margin_top = 22.0
margin_right = 103.5
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackWhite2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 4 )
margin_left = 150.5
margin_top = 22.5
margin_right = 247.5
margin_bottom = 214.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="spawn_trash" from="Board1" to="." method="_on_Board1_spawn_trash"]
[connection signal="use_item" from="Board1" to="." method="_on_Board1_use_item"]
[connection signal="won_item" from="Board1" to="." method="_on_Board1_won_item"]
[connection signal="spawn_trash" from="Board2" to="." method="_on_Board2_spawn_trash"]
[connection signal="use_item" from="Board2" to="." method="_on_Board2_use_item"]
[connection signal="won_item" from="Board2" to="." method="_on_Board2_won_item"]
